-Created app.js - Added it to dist - Linked to index - Added event listener to form on submit to execute computeResults - Created computeResults

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="container"> 
 
                 <!--Form-->
-                <form action="">
+                <form id="loan-form" action="">
                     <div class="row">
                         <label for="amount">Loan Amount</label>
                         <input type="text" name="" id="">
@@ -74,5 +74,6 @@
         </div>
     </section>
 
+    <script src="dist/js/app.js" type="text/javascript"></script>
 </body>
 </html>
