--- a/index.html
+++ b/index.html
@@ -27,22 +27,23 @@
             <div class="container"> 
 
                 <!--Form-->
-                <form id="loan-form" action="">
+                <form id="loan" action="">
                     <div class="row">
                         <label for="amount">Loan Amount</label>
-                        <input type="text" name="" id="">
+                        <input type="number" id="amount">
                     </div>
 
                     <div class="row">
-                        <label for="amount">Interest Rate</label>
-                        <input type="text" name="" id="">
+                        <label for="rate">Interest Rate</label>
+                        <input type="number" id="rate">
                     </div>
 
                     <div class="row">
-                        <label for="amount">Number of Years</label>
-                        <input type="text" name="" id="">
+                        <label for="year">Number of Years</label>
+                        <input type="number" id="year">
                     </div>
-                    <button type="submit">Calculate</button>
+
+                    <button>Calculate</button>
                 </form>
             </div>
         </div>
@@ -74,6 +75,6 @@
         </div>
     </section>
 
-    <script src="dist/js/app.js" type="text/javascript"></script>
+    <script src="dist/js/app.js"></script>
 </body>
 </html>
