--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </h2>
 
           <!--Flex-box container-->
-          <div class="flex flex-col mt-8 md:flex-row md:space-x-6">
+          <div class="flex flex-col mt-8 space-y-4 md:flex-row md:space-x-6">
 
             <!--Box 1-->
             <div class="flex flex-col space-y-4 items-center p-6 rounded-lg bg-green-300 text-white md:w-1/3 ring-1 ring-slate-900/5 shadow-xl">
